csrc/tests/codegen_probes/errors/err_assign_array_to_scalar.bas
' REJECT: assigning an array to a scalar variable.
' zxbparser p_let:1112 "Cannot assign an array to an scalar variable".
Dim s As Byte
Dim a(10) As Byte
s = a
